--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
                 lat:21.139087,
                 long:72.7494012
             },
+            {
+                name:"Vareli",
+                lat:21.1782987,
+                long:72.9298223
+            },
         ];
 
         cities.forEach(city => {
